Yocto_Infor/yocto_TXT/output_452.txt
* [meta-rockchip][PATCH] trusted-firmware-a: Add missing Upstream-Status
@ 2023-06-21 23:59 Khem Raj
  0 siblings, 0 replies; only message in thread
From: Khem Raj @ 2023-06-21 23:59 UTC (permalink / raw)
  To: yocto; +Cc: twoerner, Khem Raj

Signed-off-by: Khem Raj <raj.khem@gmail.com>
---
 .../files/0001-dram-Fix-build-with-gcc-11.patch                  | 1 +
 1 file changed, 1 insertion(+)

diff --git a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
index 14defed..120ea0b 100644
--- a/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
+++ b/recipes-bsp/trusted-firmware-a/files/0001-dram-Fix-build-with-gcc-11.patch
@@ -11,6 +11,7 @@ plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c:781:11: error: explicitly a
                 twr_tmp = twr_tmp;
                 ~~~~~~~ ^ ~~~~~~~
 
+Upstream-Status: Pending
 Signed-off-by: Khem Raj <raj.khem@gmail.com>
 ---
  plat/rockchip/rk3399/drivers/dram/dram_spec_timing.c | 2 +-
-- 
2.41.0



^ permalink raw reply related	[flat|nested] only message in thread
only message in thread, other threads:[~2023-06-21 23:59 UTC | newest]

Thread overview: (only message) (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2023-06-21 23:59 [meta-rockchip][PATCH] trusted-firmware-a: Add missing Upstream-Status Khem Raj

